--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
   "name": "glipbotformthorreport",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "author": "nasen.you <nasen.you@ringcentral.com>",
   "description": "bot for mThor test report",
   "dependencies": {
+    "express": "^4.15.2",
     "hubot": "^2.19.0",
     "hubot-diagnostics": "0.0.1",
     "hubot-glip": "^2.0.0",
     "hubot-google-images": "^0.2.6",
     "hubot-google-translate": "^0.2.0",
     "hubot-help": "^0.2.0",
-    "hubot-heroku-keepalive": "^1.0.2",
     "hubot-maps": "0.0.2",
-    "hubot-pugme": "^0.1.0",
     "hubot-redis-brain": "0.0.3",
+    "hubot-pugme": "^0.1.0",
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.0"
   },
   "engines": {
     "node": "0.10.x"
+  },
+  "devDependencies": {
+    "npm-check-updates": "^2.10.0"
   }
 }
